# gw

./: .gitignore  .railwayignore  CLAUDE.md  GENOPRED_FEATURES_PLAN.md  IMPUTATION_NOTES.md  PGS Catalog Licensing Summary.md  PGS_CATALOG_LICENSE_ANALYSIS.md  README.md  TO_DO.md  TO_FIX.md  launch_backend.sh  pgs_catalog_full.csv  pgs_license_scan.csv  pyproject.toml  railway.toml
ai_literature_extraction/: extract.py  extraction_plan.md  result.json  stage1_system_prompt.md  stage1_triage.py
alembic/: env.py
app/: auth.py  config.py  db.py  main.py  schemas.py
docs/: ARCHITECTURE.md  adding-a-polygenic-score.md  ancestry-estimation.md  competitor-comparison.md  pharmacogenomics_example_report.md
frontend/: eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
pgs_calc_methods/: METHODOLOGY.md  best polygenic scores.txt  prs_calc_comparison_with_gene_wizard.md  results.json  score_all.py  score_all_v1.py  scoring_comparison_report.md
scripts/: _pgx_allele_definitions.py  _pgx_seed_data.py  build_aeon_reference.py  bulk_enrich_snpedia_snps.py  check_pgs_staleness.py  compute_aim_panel.py  compute_empirical_ref_dists.py  compute_reference_dists.py  dump_pgs_catalog.py  enrich_snpedia_positions.py  export_demo_data.py  extract_cpic_dpwg.py  extract_gwas_percentiles.py  fetch_gene_descriptions.py  import_clinvar.py  import_clinvar_citations.py  import_clinvar_gene_summary.py  import_pgx_alleles.py  import_snpedia_rsids.py  ingest_gwas_scores.py  ingest_pgs.py  load_1kg_frequencies.py  populate_gene_coordinates.py  (+4 more)
(+156 files in other folders)
