[project]
name = "gene-wizard"
version = "0.1.0"
description = "genewizard.net — Polygenic risk score and SNP-trait analysis from DTC genotype files"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "polars>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
    "isal>=1.6",
    "reportlab>=4.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pandas>=2.0",
    "pyliftover>=0.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100
